cmake_minimum_required(VERSION 3.16)
project(beyond_the_basics)

set(CMAKE_CXX_STANDARD 17)

add_executable(beyond_the_basics main.cpp Resource.cpp Resource.h ListVsVector.cpp ListVsVector.h Resourcing.cpp Resourcing.h Vectors.cpp Vectors.h Llambdas.cpp Llambdas.h StdAlgos.cpp StdAlgos.h CollectionExercise.cpp CollectionExercise.h Sizes.cpp Sizes.h)